# portfolio

./: .env  .gitignore  Cargo.toml  spec.md  todo.md
src/: config.rs  error.rs  lib.rs  main.rs  scheduler.rs
src/models/: log.rs  metric.rs  mod.rs  trace.rs
src/storage/: mod.rs
src/tasks/: home_generator.rs  mod.rs
src/templating/: engine.rs  html_renderer.rs  mod.rs  renderer.rs  template.rs  text_renderer.rs
templates/: dashboard.tmpl  home.tmpl
