[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"
authors = ["Boat Time <boat19time375@protonmail.com>"]
description = "A static website generator"

[dependencies]
async-trait = "0.1.87"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
envy = "0.4.2"
futures = "0.3.31"
log = "0.4.26"
num_cpus = "1.16.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tera = "1.20.0"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
uuid = { version = "1.15.1", features = ["v4"] }

[dev-dependencies]
mockall = "0.13.1"
serial_test = "3.2.0"
tempfile = "3.18.0"
